Ventana about terminada

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,14 @@
     <string name="string_favoritequotes">FAVORITE QUOTES</string>
     <string name="string_settings">SETTINGS</string>
     <string name="string_about">ABOUT</string>
+
     <string name="string_about_text">Quotation Shake by\n\n Alberto y Carlos \n\n aldear@epsa.upv.es carherpi@inf.upv.es \n\n2018</string>
+
+    <string name="username">Name that identifies the user</string>
+    <string name="insert_name">Insert your name</string>
+    <string name="select_language">Quotations will be received in the selected language</string>
+    <string name="http_method">Web requests will be performed using the selected HTTP method </string>
+    <string name="get">GET</string>
+    <string name="post">POST</string>
 
 </resources>
