--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="app_name">Quote App</string>
+    <string name="app_name" translatable="false">Quote App</string>
     <string name="string_getquotes">GET QUOTES</string>
-    <string name="string_favoritequotes">FAVORITE QUOTES</string>
+    <string name="string_favouritequotes">FAVOURITE QUOTES</string>
     <string name="string_settings">SETTINGS</string>
     <string name="string_about">ABOUT</string>
 
@@ -11,7 +11,15 @@
     <string name="insert_name">Insert your name</string>
     <string name="select_language">Quotations will be received in the selected language</string>
     <string name="http_method">Web requests will be performed using the selected HTTP method </string>
-    <string name="get">GET</string>
-    <string name="post">POST</string>
+    <string name="get" translatable="false">GET</string>
+    <string name="post" translatable="false">POST</string>
+
+    <string name="author_info">Author info</string>
+
+    <string name="refresh">Hello%1s! Press Refresh to get a new quotation</string>
+    <string name="sample_quotation">This is a sample quotation</string>
+    <string name="sample_author">This is a sample author</string>
+
+    <string name="current_user">Nameless One</string>
 
 </resources>
