--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,7 @@
 
     <string name="current_user">Nameless One</string>
 
+    <string name="anonymous_author">Anonymous</string>
+    <string name="confirmation_delete">“Are you sure that you want to delete this quotation?</string>
+
 </resources>
